--- a/src/main/java/com/boquerontech/supermercadoboqueron/informes/ConsultarVentas.form
+++ b/src/main/java/com/boquerontech/supermercadoboqueron/informes/ConsultarVentas.form
@@ -51,6 +51,9 @@
             </Property>
             <Property name="opaque" type="boolean" value="true"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BtnSalirActionPerformed"/>
+          </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
               <GridBagConstraints gridX="1" gridY="0" gridWidth="1" gridHeight="1" fill="0" ipadX="67" ipadY="4" insetsTop="0" insetsLeft="0" insetsBottom="40" insetsRight="0" anchor="18" weightX="0.0" weightY="0.0"/>
@@ -110,10 +113,6 @@
             <Container class="javax.swing.JPanel" name="PnlCentralItems">
 
               <Layout class="org.netbeans.modules.form.compat2.layouts.DesignFlowLayout"/>
-              <SubComponents>
-                <Component class="com.boquerontech.supermercadoboqueron.informes.items.ItemConsultasVentas" name="itemConsultasVentas1">
-                </Component>
-              </SubComponents>
             </Container>
           </SubComponents>
         </Container>
