--- a/src/main/java/com/boquerontech/supermercadoboqueron/inventario/Inventario.form
+++ b/src/main/java/com/boquerontech/supermercadoboqueron/inventario/Inventario.form
@@ -68,15 +68,17 @@
               <Font name="Segoe UI" size="18" style="0"/>
             </Property>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="6">
+              <StringArray count="7">
                 <StringItem index="0" value="Max. Stock 10"/>
                 <StringItem index="1" value="Max. Stock 25"/>
                 <StringItem index="2" value="Max. Stock 50"/>
                 <StringItem index="3" value="Max. Stock 100"/>
                 <StringItem index="4" value="Max. Stock 200"/>
                 <StringItem index="5" value="Max. Stock 500"/>
+                <StringItem index="6" value="Todos"/>
               </StringArray>
             </Property>
+            <Property name="selectedIndex" type="int" value="6"/>
             <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
               <Dimension value="[200, 31]"/>
             </Property>
