--- a/src/main/java/com/boquerontech/supermercadoboqueron/informes/InicioAnalisisyConsultas.form
+++ b/src/main/java/com/boquerontech/supermercadoboqueron/informes/InicioAnalisisyConsultas.form
@@ -128,6 +128,9 @@
               </Border>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BtnGenerarinformesinventarioActionPerformed"/>
+          </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
               <GridBagConstraints gridX="0" gridY="1" gridWidth="1" gridHeight="1" fill="1" ipadX="150" ipadY="40" insetsTop="40" insetsLeft="0" insetsBottom="40" insetsRight="0" anchor="10" weightX="0.0" weightY="0.0"/>
